Prevent friend request username from overflowing

--- a/app/features/friends/routes/friends.module.css
+++ b/app/features/friends/routes/friends.module.css
@@ -13,6 +13,12 @@
 	font-weight: var(--weight-semi);
 }
 
+.userName {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 .friendsListHeader {
 	display: flex;
 	align-items: center;
